<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movie</string>
    <string name="name_movie">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="rating">User Rating</string>
    <string name="relase">Release Date</string>


    <string name="language">Language</string>
    <string name="overview">Overview</string>
    <string name="movie_app">Movie App</string>


    <string name="movie">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="change_language_settings">Change Language Settings</string>


    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite TV Show</string>

    <string name="search">Search</string>
    <string name="title_movie">Title Movie</string>
    <string name="title_tvshow">Title Tv Show</string>
    <string name="appwidget_text">Movie Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="no_data">no data</string>
    <string name="favorite">favorite</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="hint_daily">App can send you reminder every day</string>
    <string name="release_today_reminder">Release Today Reminder</string>
    <string name="hint_release">App can send you info release movie</string>
    <string name="toogle_off">Off</string>
    <string name="toogle_on">On</string>
    <string name="daily_reminder_msg">Hello! find your movies now</string>
    <string name="release_today_reminder_msg">has been released today!</string>
    <string name="movie_detail">Movie Details</string>
    <string name="tvshow_detail">TV Show Details</string>
    <string name="setting">Setting</string>

</resources>