<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_dark"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimens_16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dimens_4dp"
            android:padding="@dimen/dimens_16dp"
            app:cardCornerRadius="@dimen/dimens_8dp">

            <Button
                android:id="@+id/btn_change_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/change_language_settings"
                android:textAllCaps="false"
                android:textColor="@color/brown"
                android:textSize="18sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_16dp"
            android:elevation="@dimen/dimens_4dp"
            android:padding="@dimen/dimens_16dp"
            app:cardCornerRadius="@dimen/dimens_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dimens_16dp"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/daily_reminder"
                        android:textColor="@color/brown_dark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_daily"
                        android:textSize="14sp" />

                </LinearLayout>

                <ToggleButton
                    android:id="@+id/tb_daily_reminder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textOff="@string/toogle_off"
                    android:textOn="@string/toogle_on"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_16dp"
            android:elevation="@dimen/dimens_4dp"
            android:padding="@dimen/dimens_16dp"
            app:cardCornerRadius="@dimen/dimens_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dimens_16dp"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/release_today_reminder"
                        android:textColor="@color/brown_dark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_release"
                        android:textSize="14sp" />

                </LinearLayout>

                <ToggleButton
                    android:id="@+id/tb_release_today_reminder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textOff="@string/toogle_off"
                    android:textOn="@string/toogle_on"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</LinearLayout>